--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "spot-the-difference",
-  "version": "1.1.2",
+  "version": "1.0.0",
   "description": "Put some description here",
   "keywords": [
     "cool",
@@ -12,24 +12,26 @@
     "name": "Octoblu",
     "url": "https://github.com/octoblu"
   },
-  "bin": "command.js",
+  "bin": {
+    "spot-the-difference": "command.js",
+    "std": "command.js"
+  },
   "repository": {
     "type": "git",
     "url": "https://github.com/octoblu/spot-the-difference.git"
   },
   "scripts": {
     "start": "node command.js",
-    "test": "mocha test/*.spec.coffee"
+    "test": "echo 'no tests'"
   },
   "dependencies": {
     "coffee-script": "^1.10.0",
     "colors": "^1.1.2",
-    "dashdash": "^1.14.0"
+    "dashdash": "^1.14.0",
+    "json-diff": "^0.3.1"
   },
-  "devDependencies": {
-  },
-  "peerDependencies": {
-  },
+  "devDependencies": {},
+  "peerDependencies": {},
   "engines": {
     "node": ">=5.0.0",
     "npm": ">=3.0.0"
